# multimedia-gst-aml-drm-plugins1

./: gst-aml-drm-plugins.mk
gst-aml-drm-plugins-1.0/: configure.ac  meson.build
gst-aml-drm-plugins-1.0/src/: Makefile.am
gst-aml-drm-plugins-1.0/src/aml_parse/: gst_aml_audio_parse.c  gst_aml_audio_parse.h  meson.build  plugin.c
gst-aml-drm-plugins-1.0/src/dummy/: gstdummydrm.c  gstdummydrm.h  meson.build
gst-aml-drm-plugins-1.0/src/ge2d/: gst_ge2d.c  gst_ge2d_flip.c  gst_ge2d_flip.h  meson.build
gst-aml-drm-plugins-1.0/src/gst_svp_ext/: amlogic_svp_impl.cpp  gst_svp_logging.cpp  gst_svp_performance.cpp  meson.build
gst-aml-drm-plugins-1.0/src/gst_svp_ext/plugins/: gst_svp_payload.cpp
gst-aml-drm-plugins-1.0/src/hdcp/: Makefile.am  gstamlhdcp.c  gstamlhdcp.h  meson.build
gst-aml-drm-plugins-1.0/src/secmem/: Makefile.am  gstsecmemallocator.c  gstsecmemallocator.h  gstsecmemallocator.pc.in  meson.build
gst-aml-drm-plugins-1.0/src/secure_parse/: Makefile.am  gst_aml_sec_parse.c  gstav1_sec_trans.c  gsth264_sec_parse.c  gsth264_sec_parse.h  gsth265_sec_parse.c  gstvp9_sec_trans.c  gstvp9_sec_trans.h  meson.build
